sample config file

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea/*
-.idea
+.idea/
 
 ## File-based project format:
 *.iws
@@ -40,6 +39,6 @@ fabric.properties
 #APPLE
 .DS_Store
 
-#config file
+###config file
 db_config.*
 config.php
